--- a/index.html
+++ b/index.html
@@ -51,17 +51,31 @@
 
 
 
-
+😎
 
  👑 بونص
  --------
 
  scripts.js قم بكتابة الكود اللازم داخل ملف
 
- "😎 استاذ مناور أقوى مدرس ويب" Alert ليظر لك
+ " استاذ مناور أقوى مدرس ويب" Alert ليظر لك
 
  فور فتحك للموقع
 
 -->
 
 <!-- 👩🏻‍✈️لا تنسى إنت قدها -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./scripts.js" >
+</head>
+<body>
+   
+
+</body>
+</html>
